--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#features" class="nav-link">Features</a>
-                <a href="#screenshots" class="nav-link">Screenshots</a>
                 <a href="#advanced-features" class="nav-link">Advanced</a>
                 <a href="#download" class="nav-link">Download</a>
             </div>
@@ -57,7 +56,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">
                         <span class="gradient-text">DESCO BD</span><br>
-                        Electricity Management Made Simple
+                        Electricity Management
                     </h1>
                     <p class="hero-description">
                         Secure electricity account management for Dhaka Electric Supply Company customers. 
@@ -77,9 +76,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="phone-mockup">
-                        <div class="phone-screen">
-                            <img src="./assets/images/app-preview.svg" alt="DESCO BD App Preview" class="app-preview">
-                        </div>
+                        <img src="./assets/images/app_splash.png" alt="DESCO BD App Preview" class="app-preview">
                         <div class="phone-shadow"></div>
                     </div>
                 </div>
@@ -160,79 +157,6 @@
         </div>
     </section>
 
-    <!-- Screenshots Section -->
-    <section id="screenshots" class="screenshots">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">App Screenshots</h2>
-                <p class="section-description">
-                    See how DESCO BD makes electricity management simple and intuitive
-                </p>
-            </div>
-            <div class="screenshots-container">
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/login-screen.png" alt="Login Screen" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Login Screen</div>
-                        <div class="screenshot-overlay">
-                            <h4>Secure Login</h4>
-                            <p>Safe and secure account authentication</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/dashboard.png" alt="Dashboard" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Dashboard</div>
-                        <div class="screenshot-overlay">
-                            <h4>Dashboard Overview</h4>
-                            <p>Complete account overview at a glance</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/consumption.png" alt="Consumption Tracking" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Consumption</div>
-                        <div class="screenshot-overlay">
-                            <h4>Consumption Analytics</h4>
-                            <p>Detailed usage charts and statistics</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/recharge-history.png" alt="Recharge History" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Recharge History</div>
-                        <div class="screenshot-overlay">
-                            <h4>Recharge History</h4>
-                            <p>Complete transaction history tracking</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/settings.png" alt="Settings" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Settings</div>
-                        <div class="screenshot-overlay">
-                            <h4>Settings & Preferences</h4>
-                            <p>Customize your app experience</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="screenshot-item">
-                    <div class="screenshot-card">
-                        <img src="./assets/images/screenshots/dark-mode.png" alt="Dark Mode" class="screenshot-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div style="display:none; width:100%; height:500px; background:linear-gradient(135deg, #667eea 0%, #764ba2 100%); align-items:center; justify-content:center; color:white; font-size:18px; font-weight:bold;">Dark Mode</div>
-                        <div class="screenshot-overlay">
-                            <h4>Dark Mode</h4>
-                            <p>Comfortable viewing in any light</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Download Section -->
     <section id="download" class="download">
@@ -245,12 +169,9 @@
                         Available for Android devices.
                     </p>
                     <div class="download-buttons">
-                        <a href="#" class="download-btn android-btn">
+                        <a href="#" class="download-btn android-btn" id="download-btn">
                             <i class="fas fa-download"></i>
-                            <div class="btn-text">
-                                <span class="btn-label">Download</span>
-                                <span class="btn-store">App Now</span>
-                            </div>
+                            <span>Download Now</span>
                         </a>
                     </div>
                     <div class="download-info">
@@ -263,14 +184,14 @@
                             <span>Free Download</span>
                         </div>
                         <div class="info-item">
-                            <i class="fas fa-mobile-alt"></i>
-                            <span>Android 5.0+</span>
+                            <i class="fas fa-code-branch"></i>
+                            <span>Version <span id="app-version"></span></span>
                         </div>
                     </div>
                 </div>
                 <div class="download-image">
                     <div class="download-mockup">
-                        <img src="./assets/images/app-preview.svg" alt="DESCO BD App" class="download-preview">
+                        <img src="./assets/images/app_splash.png" alt="DESCO BD App" class="download-preview">
                     </div>
                 </div>
             </div>
@@ -354,26 +275,6 @@
                         <a href="https://github.com/tuhinx" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
-                <div class="footer-right">
-                    <div class="footer-section">
-                        <h4 class="footer-title">Quick Links</h4>
-                        <ul class="footer-links">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#screenshots">Screenshots</a></li>
-                            <li><a href="#download">Download</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4 class="footer-title">App Info</h4>
-                        <ul class="footer-info-list">
-                            <li>Version 1.0.0</li>
-                            <li>Android 5.0+</li>
-                            <li>Free Download</li>
-                            <li>100% Secure</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
@@ -392,6 +293,7 @@
     </button>
 
     <!-- JavaScript -->
+    <script src="./app-config.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
